--- a/Day 1 - JS Drum Kit/index.html
+++ b/Day 1 - JS Drum Kit/index.html
@@ -49,15 +49,15 @@
     </div>
   </div>
 
-  <audio data-key="65" src="sounds/Clap.wav"></audio>
-  <audio data-key="83" src="sounds/Hihat.wav"></audio>
-  <audio data-key="68" src="sounds/Kick.wav"></audio>
-  <audio data-key="70" src="sounds/Openhat.wav"></audio>
-  <audio data-key="71" src="sounds/Boom.wav"></audio>
-  <audio data-key="72" src="sounds/Ride.wav"></audio>
-  <audio data-key="74" src="sounds/Snare.wav"></audio>
-  <audio data-key="75" src="sounds/Tom.wav"></audio>
-  <audio data-key="76" src="sounds/Tink.wav"></audio>
+  <audio data-key="65" src="sounds/clap.wav"></audio>
+  <audio data-key="83" src="sounds/hihat.wav"></audio>
+  <audio data-key="68" src="sounds/kick.wav"></audio>
+  <audio data-key="70" src="sounds/openhat.wav"></audio>
+  <audio data-key="71" src="sounds/boom.wav"></audio>
+  <audio data-key="72" src="sounds/ride.wav"></audio>
+  <audio data-key="74" src="sounds/snare.wav"></audio>
+  <audio data-key="75" src="sounds/tom.wav"></audio>
+  <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
   function playSound(event) {
