--- a/Day 10 - Hold Shift and Check Checkboxes/index.html
+++ b/Day 10 - Hold Shift and Check Checkboxes/index.html
@@ -10,14 +10,14 @@
 
     html {
       font-family: sans-serif;
-      background: #ffc600;
+      background: #BADA55;
     }
 
     .inbox {
       max-width: 400px;
       margin: 50px auto;
       background: white;
-      border-radius: 5px;
+      border-radius: 6px;
       box-shadow: 10px 10px 0 rgba(0,0,0,0.1);
     }
 
@@ -50,12 +50,24 @@
       font-weight: 200;
       border-left: 1px solid #D1E2FF;
     }
+
+    button {
+      margin: 0.5em;
+      padding: 0.5em 1em;
+      border-radius: 6px;
+      border: 2px solid #0099CC;
+    }
+
+    button:hover,
+    button:focus {
+      background-color: #0099CC;
+      color: white;
+    }
   </style>
    <!--
    The following is a common layout you would see in an email client.
 
-   When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down,
-   all the checkboxes inbetween those two checkboxes should be checked.
+   When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down, all the checkboxes inbetween those two checkboxes should be checked.
 
   -->
   <div class="inbox">
@@ -95,40 +107,45 @@
       <input type="checkbox">
       <label>Don't forget to tweet your result!</label>
     </div>
+    <button id="clear">clear</button>
   </div>
 
 <script>
 
-// Select all checkboxes.
-  const checkboxes = document.querySelectorAll( '.inbox input[type="checkbox"]' );
-  let lastChecked;
+// Get access to checkboxes
+  const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
 
-// check whether checkbox has been clicked
-  function handleCheck(event) {
-    // Check if shift key is down
-    // AND check that they are checking it. NOT unchecking!
-    let inBetween = false;
-    if (event.shiftKey && this.checked) {
-      // loop over every checkbox
+  let lastClicked; // Keep track of the last checked item
+
+  function handleCheck(e) {
+    console.log("clicked");
+    let inBetween  = false; // Flag variable to let us know where to start checking and where to stop
+    // if user holds shift while checking a box
+    if ( e.shiftKey && this.checked ) {
+      // Do something 
+      // Loop over every checkbox
       checkboxes.forEach(checkbox => {
-        console.log(checkbox);
-        if (checkbox === this || checkbox === lastChecked) {
+        if(checkbox === this || checkbox === lastClicked) {
+        // Flip the flag variable to true when we check first item then to false when we check the last item
           inBetween = !inBetween;
-          console.log(`Starting to check the inputs`);
         }
-
-        if(inBetween) {
+        if (inBetween) {
           checkbox.checked = true;
         }
-      });
+      })
     }
-    lastChecked = this;
+    lastClicked = this;
   }
 
-// Listen for when any checkbox gets clicked or changed.
-  checkboxes.forEach( checkbox => checkbox.addEventListener( 'click', handleCheck) );
-
-
+  // Listen for click and do something when event fires
+  checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
+  
+  // Add ‘Clear Selected’ button functionality
+  const clearButton = document.querySelector('#clear');
+  function clearCheckboxes() {
+    checkboxes.forEach(checkbox => checkbox.checked = false);
+  }
+  clearButton.addEventListener('click', clearCheckboxes);
 </script>
 </body>
 </html>
